提交信息成功-toast 提示框

--- a/05.案例-个人信息设置/index.html
+++ b/05.案例-个人信息设置/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <!-- toast 提示框 -->
+  <!-- bootstrap样式：toast 提示框,data-bs-delay="1500"显示时间 -->
   <div class="toast my-toast" data-bs-delay="1500">
     <div class="toast-body">
       <div class="alert alert-success info-box">
